Ease builds on CI and locally - react to a smallish breaking change in newer Owin packages - gather more information when restoring RuntimePortable.sln   - use `$(RestoreUseSkipNonexistentTargets)` as well - ignore binary logs - ensure the .NET Core 2.1 VS component is installed   - allow use of any 2.1.5xx .NET SDK - add a few words to code analysis dictionary - exclude files generated for `net45` legacy projects don't cause problems when compiling for `netstandard2.0` - handle additional `ReflectionTypeLoadException`s when using the xUnit `msbuild` runner

--- a/src/System.Net.Http.Formatting.NetStandard/System.Net.Http.Formatting.NetStandard.csproj
+++ b/src/System.Net.Http.Formatting.NetStandard/System.Net.Http.Formatting.NetStandard.csproj
@@ -41,7 +41,7 @@
       <Link>Common\UriQueryUtility.cs</Link>
     </Compile>
 
-    <Compile Include="..\System.Net.Http.Formatting\**\*.cs">
+    <Compile Include="..\System.Net.Http.Formatting\**\*.cs" Exclude="..\System.Net.Http.Formatting\obj\**\*.cs">
       <Link>%(RecursiveDir)\%(Filename).cs</Link>
     </Compile>
   </ItemGroup>
