--- a/src/System.Net.Http.Formatting.NetStandard/System.Net.Http.Formatting.NetStandard.csproj
+++ b/src/System.Net.Http.Formatting.NetStandard/System.Net.Http.Formatting.NetStandard.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory),Runtime.sln))\tools\WebStack.settings.targets" />
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -13,67 +13,49 @@
     <Configurations>$(Configurations);CodeAnalysis</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
 
-    <Compile Include="..\Common\CollectionExtensions.cs">
-      <Link>Common\CollectionExtensions.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\Error.cs">
-      <Link>Common\Error.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\ListWrapperCollection.cs">
-      <Link>Common\ListWrapperCollection.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\TaskHelpers.cs">
-      <Link>Common\TaskHelpers.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\TaskHelpersExtensions.cs">
-      <Link>Common\TaskHelpersExtensions.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\UriQueryUtility.cs">
-      <Link>Common\UriQueryUtility.cs</Link>
-    </Compile>
+    <Compile Include="..\CommonAssemblyInfo.cs" Link="Properties\CommonAssemblyInfo.cs" />
+    <Compile Include="..\Common\CollectionExtensions.cs" Link="Common\CollectionExtensions.cs" />
+    <Compile Include="..\Common\Error.cs" Link="Common\Error.cs" />
+    <Compile Include="..\Common\ListWrapperCollection.cs" Link="Common\ListWrapperCollection.cs" />
+    <Compile Include="..\Common\TaskHelpers.cs" Link="Common\TaskHelpers.cs" />
+    <Compile Include="..\Common\TaskHelpersExtensions.cs" Link="Common\TaskHelpersExtensions.cs" />
 
-    <Compile Include="..\System.Net.Http.Formatting\**\*.cs" Exclude="..\System.Net.Http.Formatting\obj\**\*.cs">
+    <Compile Include="..\System.Net.Http.Formatting\**\*.cs"
+        Exclude="..\System.Net.Http.Formatting\obj\**\*.cs;
+                 ..\System.Net.Http.Formatting\Properties\Resources.Designer.cs">
       <Link>%(RecursiveDir)\%(Filename).cs</Link>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
+
     <Compile Include="..\Common\CommonWebApiResources.Designer.cs">
-      <Link>Properties\CommonWebApiResources.Designer.cs</Link>
       <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
       <DependentUpon>CommonWebApiResources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <Link>Properties\CommonWebApiResources.Designer.cs</Link>
     </Compile>
     <EmbeddedResource Include="..\Common\CommonWebApiResources.resx">
-      <Link>Properties\CommonWebApiResources.resx</Link>
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>CommonWebApiResources.Designer.cs</LastGenOutput>
+      <Link>Properties\CommonWebApiResources.resx</Link>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="..\System.Net.Http.Formatting\Properties\Resources.Designer.cs">
+
+    <Compile Include="..\System.Net.Http.Formatting\Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <Link>Properties\Resources.Designer.cs</Link>
     </Compile>
     <EmbeddedResource Include="..\System.Net.Http.Formatting\Properties\Resources.resx">
-      <Link>Properties\Resources.resx</Link>
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <Link>Properties\Resources.resx</Link>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <CodeAnalysisDictionary Include="..\CodeAnalysisDictionary.xml">
-      <Link>CodeAnalysisDictionary.xml</Link>
-    </CodeAnalysisDictionary>
+
+    <CodeAnalysisDictionary Include="..\CodeAnalysisDictionary.xml" Link="CodeAnalysisDictionary.xml" />
   </ItemGroup>
 </Project>
