--- a/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
+++ b/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
@@ -1,128 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory),Runtime.sln))\tools\WebStack.settings.targets" />
   <PropertyGroup>
-    <ProjectGuid>{FCCC4CB7-BAF7-4A57-9F89-E5766FE536C0}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.TestCommon</RootNamespace>
-    <AssemblyName>Microsoft.TestCommon</AssemblyName>
-    <IsTestProject>false</IsTestProject>
+    <TargetFrameworks>netcoreapp2.1;net452</TargetFrameworks>
     <OutputPath>..\..\bin\$(Configuration)\Test\</OutputPath>
-    <CodeSignEnabled>false</CodeSignEnabled>
-    <EnableGetGitHeadSHA1>false</EnableGetGitHeadSHA1>
-    <ValidateBuildParamsDisabled>true</ValidateBuildParamsDisabled>
-    <VersionFileGenerationEnabled>false</VersionFileGenerationEnabled>
+    <Configurations>$(Configurations);CodeAnalysis</Configurations>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.WebRequest" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\xunit.abstractions.2.0.1\lib\net35\xunit.abstractions.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="xunit.assert, Version=2.3.0.3820, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\xunit.assert.2.3.0\lib\netstandard1.1\xunit.assert.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="xunit.core, Version=2.3.0.3820, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\xunit.extensibility.core.2.3.0\lib\netstandard1.1\xunit.core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="xunit.execution.desktop, Version=2.3.0.3820, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\xunit.extensibility.execution.2.3.0\lib\net452\xunit.execution.desktop.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+    <None Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+
+    <PackageReference Include="Moq" Version="4.7.142.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.1" />
+    <PackageReference Include="xunit.assert" Version="2.3.0" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.3.0" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.3.0" />
+
+    <Compile Remove="AppDomainUtils.cs;Microsoft\TestCommon\RuntimeEnvironment.cs;WebUtils.cs"
+        Condition=" '$(TargetFramework)' == 'netcoreapp2.1' "/>
+    <Reference Include="System.Web" Condition=" '$(TargetFramework)' == 'net452' " />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="DataAttribute.cs" />
-    <Compile Include="EnumHelperTestBase.cs" />
-    <Compile Include="ExceptionUtility.cs" />
-    <Compile Include="FactDiscoverer.cs" />
-    <Compile Include="InlineDataAttribute.cs" />
-    <Compile Include="MatrixTheoryDataSet.cs" />
-    <Compile Include="Microsoft\TestCommon\DataSets\TestDataHolder.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\ByteEnum.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\SByteEnum.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\ShortEnum.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\UIntEnum.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\UShortEnum.cs" />
-    <Compile Include="Platform.cs" />
-    <Compile Include="PlatformInfo.cs" />
-    <Compile Include="PortReserver.cs" />
-    <Compile Include="PropertyDataAttribute.cs" />
-    <Compile Include="ReplaceCultureAttribute.cs" />
-    <Compile Include="RestoreThreadPrincipalAttribute.cs" />
-    <Compile Include="AppDomainUtils.cs" />
-    <Compile Include="Assert.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CultureReplacer.cs" />
-    <Compile Include="FactAttribute.cs" />
-    <Compile Include="SkippedXunitTestCase.cs" />
-    <Compile Include="TheoryAttribute.cs" />
-    <Compile Include="DictionaryEqualityComparer.cs" />
-    <Compile Include="ExceptionAssertions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ForceGCAttribute.cs" />
-    <Compile Include="MemberHelper.cs" />
-    <Compile Include="Microsoft\TestCommon\DataSets\RefTypeTestData.cs" />
-    <Compile Include="Microsoft\TestCommon\DataSets\TestDataVariations.cs" />
-    <Compile Include="Microsoft\TestCommon\DataSets\ValueTypeTestData.cs" />
-    <Compile Include="Microsoft\TestCommon\GenericTypeAssert.cs" />
-    <Compile Include="Microsoft\TestCommon\HttpAssert.cs" />
-    <Compile Include="Microsoft\TestCommon\MediaTypeAssert.cs" />
-    <Compile Include="Microsoft\TestCommon\MediaTypeHeaderValueComparer.cs" />
-    <Compile Include="Microsoft\TestCommon\ParsedMediaTypeHeaderValue.cs" />
-    <Compile Include="Microsoft\TestCommon\RegexReplacement.cs" />
-    <Compile Include="Microsoft\TestCommon\RuntimeEnvironment.cs" />
-    <Compile Include="Microsoft\TestCommon\SerializerAssert.cs" />
-    <Compile Include="Microsoft\TestCommon\StreamAssert.cs" />
-    <Compile Include="Microsoft\TestCommon\TaskAssert.cs" />
-    <Compile Include="Microsoft\TestCommon\DataSets\TestData.cs" />
-    <Compile Include="Microsoft\TestCommon\TestDataSetAttribute.cs" />
-    <Compile Include="Microsoft\TestCommon\TimeoutConstant.cs" />
-    <Compile Include="Microsoft\TestCommon\TypeAssert.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\FlagsEnum.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\INameAndIdContainer.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\ISerializableType.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\LongEnum.cs" />
-    <Compile Include="Microsoft\TestCommon\Types\SimpleEnum.cs" />
-    <Compile Include="Microsoft\TestCommon\DataSets\CommonUnitTestDataSets.cs" />
-    <Compile Include="Microsoft\TestCommon\XmlAssert.cs" />
-    <Compile Include="PreAppStartTestHelper.cs" />
-    <Compile Include="PreserveSyncContextAttribute.cs" />
-    <Compile Include="ReflectionAssert.cs" />
-    <Compile Include="TestFile.cs" />
-    <Compile Include="TestHelper.cs" />
-    <Compile Include="TheoryDataSet.cs" />
-    <Compile Include="TheoryDiscoverer.cs" />
-    <Compile Include="ThreadPoolSyncContext.cs" />
-    <Compile Include="TraitAttribute.cs" />
-    <Compile Include="VersionTestHelper.cs" />
-    <Compile Include="WebUtils.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="xunit.runner.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\..\packages\xunit.analyzers.0.7.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <ProjectExtensions>
-    <VisualStudio>
-      <UserProperties xunit_1runner_1json__JSONSchema="https://xunit.github.io/schema/v2.1-rc1/xunit.runner.schema.json" />
-    </VisualStudio>
-  </ProjectExtensions>
 </Project>
