Build w/ VS 2019; restore w/ `msbuild` - handle both SDK-style and legacy projects in one way   - set `$(RestorePackagesConfig)` to cover both project types - allow newer .NET SDKs to align w/ VS components - make a few `<import/>`s conditional to avoid problems in `Restore` target evaluation - restore global packages.config before building to make StyleCop available - move second copies of packages.config packages into packages/ folder - update FxCop TFM   - .NET 4.0 not supported because current FxCopSdk is built against .NET 4.7.2 - suppress new warnings about old FxCop approach and not using `IFormatProvider`

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,11 @@
 
   <PropertyGroup>
     <!-- Require VS2017 so VS builds also use MSBuild v15.0. -->
-    <MinimumVisualStudioVersion>15.0</MinimumVisualStudioVersion>
+    <MinimumVisualStudioVersion>16.0</MinimumVisualStudioVersion>
+    <!--
+      Suppress "MSBUILD : warning : Post-build Code Analysis (FxCopCmd.exe) has been deprecated in favor of FxCop
+      analyzers, which run during build. Refer to https://aka.ms/fxcopanalyzers to migrate to FxCop analyzers."
+    -->
+    <SuppressLegacyCodeAnalysisDeprecatedWarning>true</SuppressLegacyCodeAnalysisDeprecatedWarning>
   </PropertyGroup>
 </Project>
