--- a/test/Directory.Build.targets
+++ b/test/Directory.Build.targets
@@ -1,6 +1,6 @@
 <Project>
   <Import Project="..\Directory.Build.targets" />
-  <Import Project="..\packages\**\xunit.runner.msbuild.props" />
+  <Import Project="..\packages\xunit.runner.msbuild.2.3.1\**\xunit.runner.msbuild.props" />
 
   <Target Name="Test" DependsOnTargets="_TestWithVSTest;_TestWithDotnetTest;_TestWithRunner" />
 
