--- a/tools/src/Microsoft.Web.FxCop/Microsoft.Web.FxCop.csproj
+++ b/tools/src/Microsoft.Web.FxCop/Microsoft.Web.FxCop.csproj
@@ -10,7 +10,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Web.FxCop</RootNamespace>
     <AssemblyName>Microsoft.Web.FxCop</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <!-- May need to be updated as FxCopSdk.dll is migrated to newer TFMs. -->
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath Condition=" '$(OutputPath)' == '' ">bin\$(Configuration)</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
