Use .NET SDK in NetCore.Test project - for now, unable to target `netcoreapp2.1` in NetCore.Test project   - Microsoft.Net.Http is not compatible   - System.Net.Http types have different identities, causing compilation failures - switch to use `dotnet vstest` for any .NET Core assemblies (just one currently)   - can use `Xunit` target for all .NET Framework assemblies - make XunitXml.TestLogger available for .NET Core App testing   - use above test logger in repo-level testing   - integrate w/ tests that use the `Xunit` target - don't import from xunit.msbuild.runner when targeting .NET Core; not needed - add `$(CopyLocalLockFileAssemblies)` to these (now both .NET SDK) test projects   - xUnit assemblies were not copied (when they should have been) w/o this

--- a/test/Directory.Build.targets
+++ b/test/Directory.Build.targets
@@ -1,6 +1,7 @@
 <Project>
   <Import Project="..\Directory.Build.targets" />
-  <Import Project="..\packages\xunit.runner.msbuild.2.3.1\**\xunit.runner.msbuild.props" />
+  <Import Project="..\packages\xunit.runner.msbuild.2.3.1\**\xunit.runner.msbuild.props"
+      Condition="$(IsTestProject) and '$(MSBuildRuntimeType)' != 'Core' and '$(TargetFrameworkIdentifier)' == '.NETFramework'" />
 
   <Target Name="Test" DependsOnTargets="_TestWithVSTest;_TestWithDotnetTest;_TestWithRunner" />
 
