--- a/.codeql.yml
+++ b/.codeql.yml
@@ -56,7 +56,7 @@ jobs:
   - task: CodeQL3000Init@0
     displayName: CodeQL Initialize
 
-  - script: .\build.cmd /p:Configuration=Release
+  - script: .\build.cmd
     displayName: Windows Build
 
   - task: CodeQL3000Finalize@0
