--- a/.codeql.yml
+++ b/.codeql.yml
@@ -56,8 +56,11 @@ jobs:
   - task: CodeQL3000Init@0
     displayName: CodeQL Initialize
 
-  - script: .\build.cmd
-    displayName: Windows Build
+  - script: .\build.cmd EnableSkipStrongNames
+    displayName: Windows Build - EnableSkipStrongNames
+
+   - script: .\build.cmd
+     displayName: Windows Build
 
   - task: CodeQL3000Finalize@0
     displayName: CodeQL Finalize
