Enable public Azure DevOps builds - add azure-pipelines.yml   - clean workspace when checking out the repo   - build about the same matrix as we have on TeamCity in Main.Integration builds     - run tests only in Release job by default   - do component governance work only in Release job   - do not inject CodeQL3000 tasks (when building main)   - publish test results - change build.cmd to enable overrides of its command line parameters
nits:
- touch up .codeql.yml to avoid test code and include portable projects

--- a/.codeql.yml
+++ b/.codeql.yml
@@ -6,7 +6,6 @@ parameters:
   default: true
 
 variables:
-- template: eng/common/templates/variables/pool-providers.yml
   # CG is handled in the primary CI pipeline
 - name: skipComponentGovernanceDetection
   value: true
@@ -59,7 +58,7 @@ jobs:
   - script: .\build.cmd EnableSkipStrongNames
     displayName: Windows Build - EnableSkipStrongNames
 
-  - script: .\build.cmd
+  - script: .\build.cmd Build /p:BuildPortable=true /p:Desktop=false
     displayName: Windows Build
 
   - task: CodeQL3000Finalize@0
