Add simple classes to NetCore project - use `ICloneable` copy to get more classes compiling   - helps NetCore in similar way to existing `MediaTypeHeaderValueExtensions` - use `InvalidEnumArgumentException` copy to simplify code and testing - both not available in `netstandard1.3` (or available packages) but easily duplicated

--- a/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
+++ b/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
@@ -26,5 +26,9 @@
 
     <Compile Remove="AppDomainUtils.cs;Microsoft\TestCommon\RuntimeEnvironment.cs;WebUtils.cs"
         Condition=" '$(TargetFrameworkIdentifier)' != '.NETFramework' " />
+
+    <!-- To access Error.InvalidEnumArgumentException in this special case. -->
+    <ProjectReference Include="..\..\src\System.Net.Http.Formatting.NetCore\System.Net.Http.Formatting.NetCore.csproj"
+        Condition=" '$(NetFX_Core)' == 'true' " />
   </ItemGroup>
 </Project>
