Test Formatting assemblies w/ `net6.0` - expand our text matrix to include a modern (and LTS) TFM - change how Formatting test assemblies are found   - `netcoreapp` is no longer the only relevant folder prefix - use the latest .NET 6 SDK   - install the 2.1.x runtime in the pipeline - don't require .NET in VS   - will use binplaced `msbuild` instead   - have `git` ignore the new .msbuild/ folder - react to new `Exception.Message`s in `netcoreapp3.1`   - handle different formatting of argument info in `ArgumentException.Message`s   - handle slightly greater `decimal` precision in a `JsonReaderException.Message` - react to new `Exception.Message`s and other changes in `net6.0`   - handle different `Message` in `InvalidOperationException`s about invalid request URIs - react to other changes in `net6.0`   - handle inability to mock a `Stream` if a writer passes a `ReadOnlySpan<byte>` in `net6.0`     - see moq/moq4#829, moq/moq4#979, and dotnet/runtime#45152 about the issue   - skip tests failing due to `HttpResponseMessage` changes     - see dotnet/runtime@b48900f3b37e6d68b5d84a3e48f0c5beb602a128 which introduced this - nits:   - simplify define use now that `NETCOREAPP3_1_OR_GREATER` and so on are available   - clean up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
-[Bb]in
-[Oo]bj
-[Tt]est[Rr]esults
+.msbuild/
+.vs/
+bin/
+obj/
+packages/
+
+*.[Cc]ache
+*.binlog
+*.dll
+*.dot[Cc]over
+*.exe
+*.nupkg
+*.orig
+*.psess
+*.sln.ide
 *.suo
 *.user
-*.[Cc]ache
-*[Rr]esharper*
-packages
-NuGet.exe
-_[Ss]cripts
-*.binlog
-*.exe
-*.dll
-*.nupkg
-*.dot[Cc]over
 *.vsp
-*.psess
-*.orig
-*.sln.ide
-.vs/
-project.lock.json
+*[Rr]esharper*
 *launchSettings.json
