--- a/src/System.Net.Http.Formatting/packages.config
+++ b/src/System.Net.Http.Formatting/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net45" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="netstandard2.0" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="netstandard2.0" />
+  <package id="System.Memory" version="4.5.5" targetFramework="netstandard2.0" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="netstandard2.0" />
 </packages>
