--- a/test/System.Net.Http.Formatting.Test/packages.config
+++ b/test/System.Net.Http.Formatting.Test/packages.config
@@ -2,8 +2,14 @@
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net452" />
   <package id="Moq" version="4.7.142" targetFramework="net452" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="netstandard2.0" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="netstandard2.0" />
+  <package id="System.IO.Pipelines" version="4.7.5" targetFramework="netstandard2.0" />
+  <package id="System.Memory" version="4.5.5" targetFramework="netstandard2.0" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="netstandard2.0" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="portable-net45+win8+wp8+wpa81" />
   <package id="xunit" version="2.3.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net452" />
   <package id="xunit.analyzers" version="0.7.0" targetFramework="net452" />
